adicionando a tela de login

--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu Principal - APAE</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/Menu Principal/css/styles.css">
 </head>
 <body>
   <header>
@@ -14,26 +14,26 @@
 
   <div class="content">
     <div class="mascot">
-      <img src="/img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
+      <img src="/Menu Principal/img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
     </div>
     <div class="title">Vamos começar!</div>
     <div class="subtitle">Clique na opção desejada</div>
 
     <div class="menu">
       <button>
-        <img src="/img/suprimentos (1).png" alt="Insumos">
+        <img src="/Menu Principal/img/suprimentos (1).png" alt="Insumos">
         Insumos
       </button>
       <button>
-        <img src="/img/livro-de-receitas colorido.png" alt="Receitas">
+        <img src="/Menu Principal/img/livro-de-receitas colorido.png" alt="Receitas">
         Receitas
       </button>
       <button>
-        <img src="/img/chefe-de-cozinha colorida.png" alt="Produção">
+        <img src="/Menu Principal/img/chefe-de-cozinha colorida.png" alt="Produção">
         Produção
       </button>
       <button>
-        <img src="/img/mao colorida.png" alt="Venda">
+        <img src="/Menu Principal/img/mao colorida.png" alt="Venda">
         Venda
       </button>
     </div>
