--- a/Tela Login/index.html
+++ b/Tela Login/index.html
@@ -16,16 +16,16 @@
 
     <div class="content">
         <div class="mascot">
-        <img src="/Tela Login/img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
+            <img src="/Tela Login/img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
         </div>
 
         <div class="title">Olá!</div>
         <div class="subtitle">Faça login como administrador para iniciar a sessão</div>
 
-        <form>
-        <input type="text" placeholder="Usuário" required>
-        <input type="password" placeholder="Senha" required>
-        <button type="submit">Entrar</button>
+        <form action="/Menu Principal/index.html" method="get">
+            <input type="text" placeholder="Usuário" required>
+            <input type="password" placeholder="Senha" required>
+            <button type="submit">Entrar</button>
         </form>
     </div>
 </body>
