--- a/Tela Login ADM/index.html
+++ b/Tela Login ADM/index.html
@@ -22,7 +22,7 @@
         <div class="title">Olá!</div>
         <div class="subtitle">Faça login como administrador para iniciar a sessão</div>
 
-        <form action="/Menu Principal/index.html" method="get">
+        <form action="/Menu Principal ADM/index.html" method="get">
             <input type="text" placeholder="Usuário" required>
             <input type="password" placeholder="Senha" required>
             <button type="submit">Entrar</button>
