--- a/Menu Principal ADM/index.html
+++ b/Menu Principal ADM/index.html
@@ -1,75 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Menu Principal - APAE</title>
-  <link rel="stylesheet" href="/Menu Principal ADM/css/styles.css">
+  <title>Menu Principal - Administrador</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
   <header>
     <div class="logo">APAE</div>
-    <h1>Menu Principal</h1>
+    <h1>Menu Principal - Administrador</h1>
     <div class="accessibility">☺︎</div>
   </header>
 
   <div class="content">
     <div class="mascot">
-      <img src="/Menu Principal ADM/img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
+      <img src="img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
     </div>
 
     <div class="title">Vamos começar!</div>
     <div class="subtitle">Clique na opção desejada</div>
 
     <div class="menu">
-      <a href="#">
-        <button>
-          <img src="/Menu Principal ADM/img/suprimentos (1).png" alt="Insumos">
-          Insumos
-        </button>
-      </a>
-
-      <a href="#">
-        <button>
-          <img src="/Menu Principal ADM/img/livro-de-receitas colorido.png" alt="Receitas">
-          Receitas
-        </button>
-      </a>
-
-      <a href="#">
-        <button>
-          <img src="/Menu Principal ADM/img/chefe-de-cozinha colorida.png" alt="Produção">
-          Produção
-        </button>
-      </a>
-
-      <a href="#">
-        <button>
-          <img src="/Menu Principal ADM/img/mao colorida.png" alt="Venda">
-          Venda
-        </button>
-      </a>
-
-      <a href="#">
-        <button>
-          <img src="/Menu Principal ADM/img/relatorio.png" alt="Relatórios">
-          Gerar Relatórios
-        </button>
-      </a>
-
-      <a href="/Tela Login/index.html">
-        <button>
-          <img src="/Menu Principal ADM/img/biscoito.png" alt="Iniciar Sessão">
-          Iniciar Sessão
-        </button>
-      </a>
+      <button><img src="/Menu Principal ADM/img/suprimentos (1).png" alt="Insumos">Insumos</button>
+      <button><img src="/Menu Principal ADM/img/livro-de-receitas colorido.png" alt="Receitas">Receitas</button>
+      <button><img src="/Menu Principal ADM/img/chefe-de-cozinha colorida.png" alt="Produção">Produção</button>
+      <button><img src="/Menu Principal ADM/img/mao colorida.png" alt="Venda">Venda</button>
+      <button><img src="/Menu Principal ADM/img/relatorio.png" alt="Relatórios">Gerar Relatórios</button>
+      <button onclick="window.location.href='../Tela Login/index.html'">
+        <img src="/Menu Principal ADM/img/biscoito.png" alt="Iniciar Sessão">Iniciar Sessão
+      </button>
     </div>
 
-    <form action="/Tela Login/index.html" method="get">
-      <div class="back">
-        <button>Voltar</button>
-      </div>
-    </form>
+    <div class="back">
+      <button onclick="window.location.href='../Tela Login/index.html'">Voltar</button>
+    </div>
   </div>
 </body>
+
 </html>
