--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Menu Principal - APAE</title>
-  <link rel="stylesheet" href="/Menu Principal/css/styles.css">
+  <title>Menu Principal - Usuário</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
   <header>
     <div class="logo">APAE</div>
@@ -14,35 +17,22 @@
 
   <div class="content">
     <div class="mascot">
-      <img src="/Menu Principal/img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
+      <img src="img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
     </div>
     <div class="title">Vamos começar!</div>
     <div class="subtitle">Clique na opção desejada</div>
 
     <div class="menu">
-      <button>
-        <img src="/Menu Principal/img/suprimentos (1).png" alt="Insumos">
-        Insumos
-      </button>
-      <button>
-        <img src="/Menu Principal/img/livro-de-receitas colorido.png" alt="Receitas">
-        Receitas
-      </button>
-      <button>
-        <img src="/Menu Principal/img/chefe-de-cozinha colorida.png" alt="Produção">
-        Produção
-      </button>
-      <button>
-        <img src="/Menu Principal/img/mao colorida.png" alt="Venda">
-        Venda
-      </button>
+      <button><img src="/Menu Principal/img/suprimentos (1).png" alt="Insumos">Insumos</button>
+      <button><img src="/Menu Principal/img/livro-de-receitas colorido.png" alt="Receitas">Receitas</button>
+      <button><img src="/Menu Principal/img/chefe-de-cozinha colorida.png" alt="Produção">Produção</button>
+      <button><img src="/Menu Principal/img/mao colorida.png" alt="Venda">Venda</button>
     </div>
-    <form action="/Tela Login/index.html" method="get">
-      <div class="back">
-        <button>Voltar</button>
-      </div>
-    </form>
-    
+
+    <div class="back">
+      <button onclick="window.location.href='../Tela Login/index.html'">Voltar</button>
+    </div>
   </div>
 </body>
+
 </html>
