--- a/Tela Login/index.html
+++ b/Tela Login/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Biscoitos - Login</title>
-    <link rel="stylesheet" href="/Tela Login/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <header>
         <div class="logo">APAE</div>
@@ -15,20 +17,21 @@
 
     <div class="content">
         <div class="mascot">
-            <img src="/Tela Login/img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
+            <img src="img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
         </div>
 
         <div class="title">Bem-vindo!</div>
         <div class="subtitle">Escolha como deseja fazer o login</div>
 
         <div class="login-options">
-            <a href="/Tela Login ADM/index.html">
-                <button type="button">Entrar como Administrador</button>
-            </a>
-            <a href="/Menu Principal/index.html">
-                <button type="button">Entrar como Usuário</button>
-            </a>
+            <button onclick="window.location.href='../Tela Login ADM/index.html'">
+                Entrar como Administrador
+            </button>
+            <button onclick="window.location.href='../Menu Principal/index.html'">
+                Entrar como Usuário
+            </button>
         </div>
     </div>
 </body>
+
 </html>
