atualizando novas tela

--- a/Menu Principal ADM/index.html
+++ b/Menu Principal ADM/index.html
@@ -24,7 +24,9 @@
     <div class="subtitle">Clique na opção desejada</div>
 
     <div class="menu">
-      <button><img src="/Menu Principal ADM/img/suprimentos (1).png" alt="Insumos">Insumos</button>
+
+      <button onclick="window.location.href='../Tela insumos/index.html'"><img
+          src="/Menu Principal ADM/img/suprimentos (1).png" alt="Insumos">Insumos</button>
       <button><img src="/Menu Principal ADM/img/livro-de-receitas colorido.png" alt="Receitas">Receitas</button>
       <button><img src="/Menu Principal ADM/img/chefe-de-cozinha colorida.png" alt="Produção">Produção</button>
       <button><img src="/Menu Principal ADM/img/mao colorida.png" alt="Venda">Venda</button>
