atualizando pasta so pra imagens

--- a/Menu Principal ADM/index.html
+++ b/Menu Principal ADM/index.html
@@ -27,13 +27,11 @@
 
       <button onclick="window.location.href='../Tela insumos/index.html'"><img
           src="/Menu Principal ADM/img/suprimentos (1).png" alt="Insumos">Insumos</button>
-      <button><img src="/Menu Principal ADM/img/livro-de-receitas colorido.png" alt="Receitas">Receitas</button>
-      <button><img src="/Menu Principal ADM/img/chefe-de-cozinha colorida.png" alt="Produção">Produção</button>
-      <button><img src="/Menu Principal ADM/img/mao colorida.png" alt="Venda">Venda</button>
-      <button><img src="/Menu Principal ADM/img/relatorio.png" alt="Relatórios">Gerar Relatórios</button>
-      <button onclick="window.location.href='../Tela Login/index.html'">
-        <img src="/Menu Principal ADM/img/biscoito.png" alt="Iniciar Sessão">Iniciar Sessão
-      </button>
+      <button><img src="/img/colorido.png" alt="Receitas">Receitas</button>
+      <button><img src="/img/chefe-de-cozinha colorida.png" alt="Produção">Produção</button>
+      <button><img src="/img/mao colorida.png" alt="Venda">Venda</button>
+      <button><img src="/img/relatorio.png" alt="Relatórios">Gerar Relatórios</button>
+      <button><img src="/img/biscoito.png" alt="Iniciar Sessão">Iniciar Sessão</button>
     </div>
 
     <div class="back">
