--- a/Menu Principal/index.html
+++ b/Menu Principal/index.html
@@ -23,10 +23,10 @@
     <div class="subtitle">Clique na opção desejada</div>
 
     <div class="menu">
-      <button><img src="/Menu Principal/img/suprimentos (1).png" alt="Insumos">Insumos</button>
-      <button><img src="/Menu Principal/img/livro-de-receitas colorido.png" alt="Receitas">Receitas</button>
-      <button><img src="/Menu Principal/img/chefe-de-cozinha colorida.png" alt="Produção">Produção</button>
-      <button><img src="/Menu Principal/img/mao colorida.png" alt="Venda">Venda</button>
+      <button><img src="/img/suprimentos (1).png" alt="Insumos">Insumos</button>
+      <button><img src="/img/livro-de-receitas colorido.png" alt="Receitas">Receitas</button>
+      <button><img src="/img/chefe-de-cozinha colorida.png" alt="Produção">Produção</button>
+      <button><img src="/img/mao colorida.png" alt="Venda">Venda</button>
     </div>
 
     <div class="back">
