--- a/Tela insumos/index.html
+++ b/Tela insumos/index.html
@@ -17,7 +17,7 @@
 
   <div class="content">
     <div class="mascot">
-      <img src="/Tela insumos/img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
+      <img src="/img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
     </div>
 
     <div class="title">Adicione insumos</div>
