Insumos atualizados, so pra receber o BD

--- a/Menu Principal ADM/index.html
+++ b/Menu Principal ADM/index.html
@@ -17,7 +17,7 @@
 
   <div class="content">
     <div class="mascot">
-      <img src="img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
+      <img src="/img/logoBiscoitoDivertido.png" alt="Logo do biscoito">
     </div>
 
     <div class="title">Vamos começar!</div>
@@ -25,17 +25,17 @@
 
     <div class="menu">
 
-      <button onclick="window.location.href='../Tela insumos/index.html'"><img
-          src="/Menu Principal ADM/img/suprimentos (1).png" alt="Insumos">Insumos</button>
-      <button><img src="/img/colorido.png" alt="Receitas">Receitas</button>
+      <button onclick="window.location.href='../Tela insumos/index.html'"><img src="/img/suprimentos (1).png"
+          alt="Insumos">Insumos</button>
+      <button><img src="/img/livro-de-receitas colorido.png" alt="Receitas">Receitas</button>
       <button><img src="/img/chefe-de-cozinha colorida.png" alt="Produção">Produção</button>
       <button><img src="/img/mao colorida.png" alt="Venda">Venda</button>
       <button><img src="/img/relatorio.png" alt="Relatórios">Gerar Relatórios</button>
-      <button><img src="/img/biscoito.png" alt="Iniciar Sessão">Iniciar Sessão</button>
+      <button><img src="/img/logoBiscoitoDivertido.png" alt="Iniciar Sessão">Iniciar Sessão</button>
     </div>
 
     <div class="back">
-      <button onclick="window.location.href='../Tela Login/index.html'">Voltar</button>
+      <button onclick="window.location.href='../Tela Login ADM/index.html'">Voltar</button>
     </div>
   </div>
 </body>
