--- a/Tela insumos/index.html
+++ b/Tela insumos/index.html
@@ -22,13 +22,15 @@
       <!-- Insumos serão adicionados aqui via JavaScript -->
     </div>
     <div class="add-float">
-      <button id="addButton" aria-label="Adicionar novo insumo">+</button>
+      <button id="" aria-label="Adicionar novo insumo">+</button>
     </div>
     <div class="back">
       <button onclick="window.location.href='../Menu Principal ADM/index.html'">Voltar</button>
     </div>
   </div>
+
   <script>
+    
     // Insumos fixos
     const insumosFixos = [
       { nome: "Farinha", imagem: "/img/farinha.png" },
