--- a/Tela Editar Insumos/index.html
+++ b/Tela Editar Insumos/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -21,9 +22,9 @@
     <div class="subtitle">Gerencie os ingredientes necessários para a produção</div>
     <div id="insumo-destaque" class="insumo-destaque"></div>
     <div id="historico-card" class="historico-card">
-        <div id="info-atual-insumo" class="info-atual-insumo"></div>
-        <h3>Histórico</h3>
-        <ul id="historico-lista"></ul>
+        <div id="info-atual-insumo" class="info-atual-insumo"></div>
+        <h3>Histórico</h3>
+        <ul id="historico-lista"></ul>
       <button id="limparHistoricoBtn" style="margin-top:10px; background:#d9534f; color:#fff; border:none; padding:8px 12px; border-radius:6px; cursor:pointer;">
       Limpar Histórico
       </button>
@@ -49,10 +50,28 @@
       <button type="button" id="excluirBtn"
         style="display:none;background:#d9534f;color:#fff;margin-top:10px;">Excluir</button>
     </form>
+
+
+
     <a href="/Tela insumos/index.html" class="back-btn" role="button">Voltar</a>
   </main>
 
   <script src="/Tela Editar Insumos/js/arquivo.js"></script>
+  
+  <div id="adminLoginModal" class="modal" style="display:none;">
+    <div class="modal-content">
+      <span id="closeModal" class="close">&times;</span>
+      <h2>Login Administrador</h2>
+      <form id="adminLoginForm">
+        <label for="adminUser">Usuário</label>
+        <input type="text" id="adminUser" name="adminUser" required>
+        <label for="adminPass">Senha</label>
+        <input type="password" id="adminPass" name="adminPass" required>
+        <div id="loginError" style="color:#d9534f; margin-top:8px; display:none;">Usuário ou senha inválidos.</div>
+        <button type="submit" style="margin-top:12px; background:#1e3fa9; color:#fff; border:none; padding:10px 20px; border-radius:8px; cursor:pointer;">Validar</button>
+      </form>
+    </div>
+  </div>
 
 </body>
 </html>
